# my-webapp

./: Cargo.toml
src/: db.rs  main.rs
src/routes/: db_post_test.rs  db_test.rs  footer.rs  homepage.rs  mod.rs  navbar.rs
src/rs_template/: db_post_test_template.rs  db_test_template.rs  footer_template.rs  homepage_template.rs  mod.rs  navbar_template.rs
static/css/: input.css  output.css
static/js/: app.js  app.js.map
static/ts/: app.ts
templates/: categories.html  db_post_test.html  db_test.html  footer.html  hello.html  homepage.html  navbar.html  world.html
