[package]
name = "my-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2.2.0", features = ["builtins"] }
sqlx = { version = "0.8.0", features = ["mysql", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
tower-http = { version = "0.5.2", features = ["fs"] }
once_cell = "1.16"
askama = "0.12.1"
